# frameko

./: .gitignore  README.md
ONTOLOGIE/: Ontologie_referentiels_CCCEV.md  export_criteres_communs.csv  export_criteres_referentiel.csv  export_referentiels.csv  export_themes.csv  export_tous_criteres.csv  (+1 more)
proto/: .dockerignore  .env.example  .gitignore  BRIEF_CLAUDE_CODE.md  DEPLOY-COOLIFY.md  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml  requirements.txt
proto/db/: 03_auth_rls.sql  04_neighbors.sql  05_recognition.sql  06_evidence.sql  07_documents.sql  functions.sql  schema.sql
proto/deploy/: Caddyfile
proto/mcp_server/: analyze.py  auth.py  db.py  embeddings.py  ingest.py  server.py  storage.py
proto/migrations/: 001_initial_schema.sql
proto/scripts/: apply_ingestion.py  apply_sql.py  build_embeddings.py  create_org.py  extract_source.py  infer_evidence.py  ingest_framework.py  load_data.py  load_evidence.py  seed_ontology.py  setup_app_role.py  test_connection.py
proto/src/frameko/: __init__.py  config.py
proto/src/frameko/api/: main.py  models.py
proto/src/frameko/api/routes/: assessments.py  criteria.py  export.py  frameworks.py  ingestion.py  match.py
proto/src/frameko/db/: __init__.py  client.py
proto/src/frameko/mcp/: server.py
proto/src/frameko/services/: embeddings.py
proto/tests/: conftest.py  test_api.py  test_auth.py  test_dsn.py  test_extract.py  test_ingestion.py  test_mcp.py  test_neighbors.py  test_recognition.py  test_rpc.py
proto/web/: app.py  docs.html  index.html  landing.html
(+5 files in other folders)
