[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frameko"
version = "0.1.0"
description = "Plateforme d'agrégation de référentiels de certification — prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "supabase>=2.10",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "mcp>=1.3",
    "anthropic>=0.40",
    "httpx>=0.27",
    "rdflib>=7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
frameko-api = "frameko.api.main:run"
frameko-mcp = "frameko.mcp.server:run"

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
